add selecting to option and package / change old logic for preselecting performances / update mapping, entities / add migrations

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Option.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Option.orm.yml
@@ -19,6 +19,10 @@ Acted\LegalDocsBundle\Entity\Option:
         type: boolean
         options:
           default: false
+      isSelected:
+        type: boolean
+        options:
+          default: false
       deletedTime:
         type: datetime
         nullable: true
