--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Package.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Package.orm.yml
@@ -11,6 +11,10 @@ Acted\LegalDocsBundle\Entity\Package:
     fields:
       name:
         type: string(128)
+      isSelected:
+        type: boolean
+        options:
+          default: false
       deletedTime:
         type: datetime
         nullable: true
