add logic filtering in enquiries section (publishe or draft request)

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -2,7 +2,7 @@ Acted\LegalDocsBundle\Entity\Event:
     exclusion_policy: NONE
     properties:
         id:
-            groups: [chat_list, getEvent]
+            groups: [chat_list, getEvent, enquiries]
         city:
             groups: [Default, getEvent, chat_list, chat_room, all_messages]
         eventRef:
