--- a/src/Acted/LegalDocsBundle/Resources/config/routing/price.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/price.yml
@@ -126,3 +126,9 @@ price_package_select:
     path:     /package/select/{id}
     defaults: { _controller: ActedLegalDocsBundle:PricePackage:select }
     methods:  [PATCH]
+
+price_package_options/select:
+    path:     /package/options/select/{id}
+    defaults: { _controller: ActedLegalDocsBundle:PricePackage:selectWithOptions }
+    methods:  [PATCH]
+
