--- a/domain.conf
+++ b/domain.conf
@@ -1,10 +1,18 @@
 server {
+    client_max_body_size 32m;
+
     server_name #DOMAIN#;
     root /vagrant/web;
 
     location / {
         # try to serve file directly, fallback to app.php
         try_files $uri /app.php$is_args$args;
+    }
+
+    location /uploads {
+        alias /vagrant/web/uploads;
+        access_log off;
+        expires max;
     }
 
     location ~ ^/(app_dev|config)\.php(/|$) {
