--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "incenteev/composer-parameter-handler": "2.1.2",
         "doctrine/doctrine-migrations-bundle": "1.1.1",
         "tfox/mpdf-port-bundle": "1.3.1",
-        "stfalcon/tinymce-bundle": "dev-master",
+        "stfalcon/tinymce-bundle": "2.1",
         "cocur/slugify": "v2.0",
         "davidbadura/faker-bundle": "1.1.0",
         "knplabs/knp-paginator-bundle": "2.5.1",
