feedback logic - api  get feedbacks by artist / get average rating / Add feedback and rating for artist from client / Add rating for artist from client / api switcher showing feedbacks on profile

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -67,5 +67,8 @@ Acted\LegalDocsBundle\Entity\Artist:
         technicalRequirements:
             targetEntity: Acted\LegalDocsBundle\Entity\TechnicalRequirement
             mappedBy: artist
+        feedbacks:
+            targetEntity: Acted\LegalDocsBundle\Entity\Feedback
+            mappedBy: artist
 
     lifecycleCallbacks: {  }
