--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Profile.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Profile.orm.yml
@@ -34,6 +34,14 @@ Acted\LegalDocsBundle\Entity\Profile:
           type: boolean
           options:
             default: false
+        showFeedbacks:
+          type: boolean
+          options:
+            default: true
+        showRating:
+          type: boolean
+          options:
+            default: true
     oneToOne:
         user:
           targetEntity: Acted\LegalDocsBundle\Entity\User
