--- a/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
@@ -62,3 +62,8 @@ profile_delete_media:
     path:    /{slug}/media/{id}
     defaults: { _controller: ActedLegalDocsBundle:Profile:deleteMedia }
     methods:  DELETE
+
+profile_feedbacks_switch:
+    path:    /feedbacks/switch
+    defaults: { _controller: ActedLegalDocsBundle:Profile:switchShowingFeedbacks }
+    methods:  PATCH
