upgrade logic creating event / add api for getting artists in event / add new entity for event, upgrade event and artist entities

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -70,5 +70,8 @@ Acted\LegalDocsBundle\Entity\Artist:
         feedbacks:
             targetEntity: Acted\LegalDocsBundle\Entity\Feedback
             mappedBy: artist
+        eventArtists:
+            targetEntity: Acted\LegalDocsBundle\Entity\EventArtist
+            mappedBy: artist
 
     lifecycleCallbacks: {  }
