--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -82,3 +82,8 @@ chat_room_one:
     path:     /chat/one/{chatRoomId}
     defaults: { _controller: ActedLegalDocsBundle:ChatRoom:get }
     methods:  GET
+
+feedbacks:
+    path:     /feedbacks
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:feedbacks }
+    methods:  GET
