--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Performance.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Performance.orm.yml
@@ -22,6 +22,13 @@ Acted\LegalDocsBundle\Entity\Performance:
           type: string(128)
           options:
             default: 'draft'
+        type:
+          type: integer(1)
+          options:
+            default: 0
+        comment:
+          type: text
+          nullable: true
         isVisible:
           type: boolean
           options:
