--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "misd/phone-number-bundle": "^1.1",
         "tweedegolf/swiftmailer-logger-bundle": "dev-master",
         "react/zmq": "^0.3.0",
-        "gos/web-socket-bundle": "v1.8.1"
+        "gos/web-socket-bundle": "v1.8.1",
+        "sentry/sentry-symfony": "0.7.x-dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.0.6",
