comment 'sentry' bundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -189,5 +189,5 @@ tweede_golf_swiftmailer_logger:
         entity_logger:
             enabled: true
 
-sentry:
-    dsn: "%sentry_dsn%"
+#sentry:
+#    dsn: "%sentry_dsn%"
