--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -56,4 +56,4 @@ parameters:
     confirmation_period: 86400 #24 hours
     confirmation_period_resend: 86400 #24 hours
 
-    sentry_dsn: "https://user_api_key@sentry.io/appid" #use it on production
+    #sentry_dsn: "https://user_api_key@sentry.io/appid" #use it on production
