--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,8 @@
         "react/zmq": "^0.3.0",
         "gos/web-socket-bundle": "v1.8.1",
         "sentry/sentry-symfony": "0.7.x-dev",
-        "jms/di-extra-bundle": "dev-master",
-        "jms/security-extra-bundle": "dev-master"
+        "jms/di-extra-bundle": "~1.3",
+        "jms/security-extra-bundle": "~1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.0.6",
