--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -88,6 +88,6 @@ feedbacks:
     defaults: { _controller: ActedLegalDocsBundle:ChatRoom:feedbacks }
     methods:  GET
 
-api_accept_details:
-    path:     /api/chat-room/accept-details/{eventId}
-    defaults: {_controller: ActedLegalDocsBundle:ChatRoom:acceptDetails}
+#api_accept_details:
+#    path:     /api/chat-room/accept-details/{eventId}
+#    defaults: {_controller: ActedLegalDocsBundle:ChatRoom:acceptDetails}
