Add logic for selecting rates(backend/frontend/change old apies and add new for selecting/add migration/add entity)

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Rate.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Rate.orm.yml
@@ -12,6 +12,10 @@ Acted\LegalDocsBundle\Entity\Rate:
       deletedTime:
         type: datetime
         nullable: true
+      isSelected:
+        type: boolean
+        options:
+          default: false
     manyToOne:
       option:
         targetEntity: Acted\LegalDocsBundle\Entity\Option
