Fix em DI | and DateTime to string

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -73,6 +73,7 @@ services:
         arguments:
             - "@templating.engine.twig"
             - "@app.user.manager"
+            - "@doctrine.orm.entity_manager"
 
     app.form_errors_serializer:
         class: Acted\LegalDocsBundle\FormErrors\FormErrorsSerializer
