Added client details page to templates. 01/12/2016 11:27 AM

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
@@ -67,3 +67,8 @@ profile_feedbacks_switch:
     path:    /feedbacks/switch
     defaults: { _controller: ActedLegalDocsBundle:Profile:switchShowingFeedbacks }
     methods:  PATCH
+
+profile_event_details:
+    path:   /event/details/{slug}
+    defaults: { _controller: ActedLegalDocsBundle:Profile:eventDetails }
+    methods:  GET
