added new murkup to chat

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
@@ -39,15 +39,19 @@ Acted\LegalDocsBundle\Entity\EventOffer:
         detailsAccepted:
           type: boolean
           default: false
+          nullable: true
         actsExtrasAccepted:
           type: boolean
+          nullable: true
           default: false
         timingAccepted:
           type: boolean
           default: false
+          nullable: true
         technicalRequirementsAccepted:
           type: boolean
           default: false
+          nullable: true
 
     manyToOne:
         event:
