--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -32,6 +32,8 @@ Acted\LegalDocsBundle\Entity\Event:
             serialized_name: location
         user:
             groups: [chat_list, getEvent]
+        requestQuotations:
+            groups: [chat_room]
     virtual_properties:
         getCountryId:
             serialized_name: countryId
