Ability to change event properties by ajax. App.php typo fix

--- a/src/Acted/LegalDocsBundle/Resources/config/routing.api.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing.api.yml
@@ -9,6 +9,8 @@ api_event_edit:
   path: /events/{event}/edit
   defaults: { _controller: ActedLegalDocsBundle:Events:updateEvent }
   methods: [PATCH]
+  requirements:
+    event: \d+
 
 api_venue:
   path: /venues
