--- a/src/Acted/LegalDocsBundle/Resources/config/routing.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing.yml
@@ -18,6 +18,10 @@ acted_legal_docs_homepage:
     path:     /
     defaults: { _controller: ActedLegalDocsBundle:Default:index }
 
+acted_legal_docs_api:
+    resource: "@ActedLegalDocsBundle/Resources/config/routing/api.yml"
+    prefix: /api
+
 acted_legal_docs_howitworks:
     path:     /how-it-works
     defaults: { _controller: ActedLegalDocsBundle:Default:howItWorks }
