--- a/src/Acted/LegalDocsBundle/Resources/config/routing/event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/event.yml
@@ -46,6 +46,11 @@ event_artists:
     defaults: { _controller: ActedLegalDocsBundle:Events:getEventArtists, page: 1, size: 10 }
     methods:  GET
 
+event_artists_add:
+    path: /artist
+    defaults: { _controller: ActedLegalDocsBundle:Events:addArtistToEvent}
+    methods:  POST
+
 get_client_events:
     path: /client/{user}/{page}/{size}
     requirements:
