Fix bug  - when you not authorized you can connect artist to event / Add popup and integrate with vuejs and old logic / fix bugs related with rewritung events between requestQuote /logic and creating event / change logic creating event // Add additional logic for connecting event with artist and change old / change connecting address for creating event popup / change mapping for event offer and event / change api for getting events for client /change logic related with event on frontend for profile and request quote

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Event.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Event.orm.yml
@@ -72,5 +72,8 @@ Acted\LegalDocsBundle\Entity\Event:
         eventArtists:
           targetEntity: Acted\LegalDocsBundle\Entity\EventArtist
           mappedBy: event
+        eventOffer:
+          targetEntity: Acted\LegalDocsBundle\Entity\EventOffer
+          mappedBy: event
 
     lifecycleCallbacks: {  }
