Update prices page styles. Added artist selection page to template. 09/12/2016 2:32 PM

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -115,3 +115,8 @@ delete_message:
   methods: DELETE
   requirements:
     message: \d+
+
+artist_selection:
+    path:     /artist-selection
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:artistSelection }
+    methods:  GET
