fix showing event data for sending request - update serializer and frontend part / fix duplicate of venue type for creating event / fix empty values in qty and duration in request reply popup

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -36,6 +36,8 @@ Acted\LegalDocsBundle\Entity\Event:
             groups: [chat_room]
         eventOffer:
           groups: [getEvent]
+        countDays:
+          groups: [getEvent]
     virtual_properties:
         getCountryId:
             serialized_name: countryId
