--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Message.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Message.yml
@@ -7,6 +7,7 @@ Acted\LegalDocsBundle\Entity\Message:
             groups: [chat_list, chat_room, message, all_messages]
         sendDateTime:
             groups: [chat_list, chat_room, message, all_messages]
+            type: "DateTime<'D, d M Y H:i:s O'>"
         readDateTime:
             groups: [chat_list, chat_room, message, all_messages]
         receiverUser:
