fix preselecting performances - upgrade logic, now it works for several users

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -73,5 +73,8 @@ Acted\LegalDocsBundle\Entity\Artist:
         eventArtists:
             targetEntity: Acted\LegalDocsBundle\Entity\EventArtist
             mappedBy: artist
+        eventOffer:
+            targetEntity: Acted\LegalDocsBundle\Entity\EventOffer
+            mappedBy: artist
 
     lifecycleCallbacks: {  }
