--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
@@ -66,4 +66,10 @@ Acted\LegalDocsBundle\Entity\EventOffer:
           joinColumn:
             referencedColumnName: id
             onDelete: CASCADE
+        artist:
+          targetEntity: Acted\LegalDocsBundle\Entity\Artist
+          inversedBy: eventOffer
+          joinColumn:
+           referencedColumnName: id
+           onDelete: CASCADE
     lifecycleCallbacks: {  }
