fix change request quotation logic and creating/connecting event - now detect for every artist in request quotation

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -76,5 +76,8 @@ Acted\LegalDocsBundle\Entity\Artist:
         eventOffer:
             targetEntity: Acted\LegalDocsBundle\Entity\EventOffer
             mappedBy: artist
+        requestQuotations:
+            targetEntity: Acted\LegalDocsBundle\Entity\RequestQuotation
+            mappedBy: artist
 
     lifecycleCallbacks: {  }
