added link to generated pdf

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -10,6 +10,12 @@ services:
             - { name: doctrine.event_subscriber, connection: default }
         calls:
             - [ setAnnotationReader, [ "@annotation_reader" ] ]
+    gedmo.listener.timestampable:
+        class: Gedmo\Timestampable\TimestampableListener
+        tags:
+            - { name: doctrine.event_subscriber, connection: default }
+        calls:
+            - [ setAnnotationReader, [ "@annotation_reader" ] ]
     app.twig_extension:
         class: Acted\LegalDocsBundle\Twig\Extension\AppExtension
         public: false
