--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/ChatRoom.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/ChatRoom.orm.yml
@@ -41,4 +41,9 @@ Acted\LegalDocsBundle\Entity\ChatRoom:
             joinColumn:
                 referencedColumnName: id
                 onDelete: CASCADE
+
+        order:
+            targetEntity: Acted\LegalDocsBundle\Entity\Order
+            joinColumn:
+                referencedColumnName: id
     lifecycleCallbacks: {  }
