--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,6 +81,11 @@ doctrine:
                 alias: Gedmo
                 prefix: Gedmo\Tree\Entity
                 dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Tree/Entity"
+            tree:
+                type: annotation
+                alias: Gedmo
+                prefix: Gedmo\Timestampable\Entity
+                dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Tree/Entity"
 
 # Swiftmailer Configuration
 swiftmailer:
