--- a/src/Acted/LegalDocsBundle/Resources/config/routing/security.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/security.yml
@@ -40,3 +40,7 @@ security_password_recovery:
     path: /password-recovery
     defaults: { _controller: ActedLegalDocsBundle:Security:passwordRecovery }
     methods: GET
+
+security_sustem_recovery:
+    path: /system-recovery
+    defaults: { _controller: ActedLegalDocsBundle:Profile:recoverAllProfiles}
